--- a/web/css/stylehis.css
+++ b/web/css/stylehis.css
@@ -60,7 +60,7 @@ body{
     top: 202px;
 }
 
-.carts{
+.karta{
     position: relative;
     left: 260px;
     top: 202px;
@@ -90,4 +90,27 @@ body{
     margin-left: 190px;
     margin-right: 190px;
     height: 50px;
+}
+
+.nachalo{
+    position: relative;
+    top: 425px;
+    left: 195px;
+    font-size: 15px;
+}
+
+.razvitie{
+    position: relative;
+    top: 512px;
+    left: 10px;
+    font-size: 15px;
+    z-index: 5;
+}
+
+.foto{
+    position: relative;
+    top: 592px;
+    left: -120px;
+    font-size: 15px;
+    z-index: 6;
 }
