--- a/web/signin.css
+++ b/web/signin.css
@@ -6,9 +6,12 @@ body {
 body {
   
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-image: url(../img/grid.png);
+
+  margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 30px;
+    border: 1px solid #000;
+  background-image: url(img/grid.png);
 }
 
 .form-signin {
@@ -39,8 +42,8 @@ body {
 }
 
 .asd {
-  position: top;
-  top: -900px;
+  position: relative;
+  top: 91px;
   margin-left: 190px;
   margin-right: 190px;
   height: 50px;
